hphp/test/zend/good/Zend/tests/ns_014.php
<?php
namespace test\ns1;

echo strlen("Hello"),"\n";